--- a/research.html
+++ b/research.html
@@ -201,28 +201,35 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 </li>
 </ol>
 
+<ol start="15">
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Conditionally accepted in <b>Cornell Hospitality Quarterly</b>, 2021 <br />
+Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
+</div>
+</li>
+</ol>
+
 <h3>Managerial Articles</h3>
 
-<ol start="15">
+<ol start="16">
 <li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="16">
+<ol start="17">
 <li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ol>
 
-<ul>
+<ol start="18">
 <li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Provisionally accepted in <b>MIT Sloan Management Review</b> <br />
 </div>
 </p>
 </li>
-</ul>
+</ol>
 
 <ul>
 <li><p><a href="">"Leveraging Data & AI to Excel in a Post-Pandemic Retail World,"</a> with M. Krause, Y. Adulyasak, and W. Khern-am-nuai, Submitted <br />
@@ -256,13 +263,6 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and accepted for oral presentation at the 2020 Workshop on Mechanism Design for Social Good <br />
 </div>
 </p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments (and the lack of thereof) for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Under third round of review in <b>Cornell Hospitality Quarterly</b> (after Revise and Resubmit) <br />
-Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
-</div>
 </li>
 </ul>
 
