--- a/research.html
+++ b/research.html
@@ -267,7 +267,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 </ul>
 
 <ul>
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Under second round of review in <b>Production and Operations Management</b> (after Major Revision) <br />
+<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Minor Revision in <b>Production and Operations Management</b> <br />
 </div>
 </p>
 </li>
