--- a/research.html
+++ b/research.html
@@ -313,7 +313,7 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 </ul>
 
 <ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under second round of review in <b>Management Science</b> (after Reject and Resubmit) <br />
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Major Revision in <b>Management Science</b> <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
