--- a/research.html
+++ b/research.html
@@ -202,7 +202,7 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 </ol>
 
 <ol start="15">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Conditionally accepted in <b>Cornell Hospitality Quarterly</b>, 2021 <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">"Field Experiments for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, Forthcoming in <b>Cornell Hospitality Quarterly</b>, 2021 <br />
 Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
 </div>
 </li>
