--- a/news.html
+++ b/news.html
@@ -31,6 +31,8 @@
 </div>
 <h3>In the News</h3>
 <ul>
+<li><p><a href="https://financialpost.com/news/retail-marketing/the-future-of-the-convenience-store">From Corner Stores to Frankenstores: Why the Convenience Industry Is Getting a Massive Makeover,</a> Financial Post, April 2021</p> 
+    
 <li><p><a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">The High Price of Opportunity Zones,</a> Propmodo, March 2021</p> 
   
 <li><p><a href="https://www.retailcouncil.org/coronavirus/covid-19-a-catalyst-or-a-hindrance-for-retail-sustainability-initiatives/">COVID-19: A Catalyst or a Hindrance for Retail Sustainability Initiatives?</a> Retail Council of Canada, February 2021</p> 
