--- a/workEx.html
+++ b/workEx.html
@@ -32,12 +32,12 @@
 <h2>Work Experience</h2>
 
 <ul>
-<li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2020-present)</a></b><br />
+<li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2010-present)</a></b><br />
 <b>Associate Professor of Retail Management and Operations Management (with tenure)</b><br />
-Co-Director of the McGill Retail Innovation Lab<br />
+Co-Director of the Retail Innovation Lab<br />
 Bensadoun Faculty Scholar<br />
 Associate Member, Electrical and Computer Engineering Department (by courtesy)<br />
-Member of CIRRELT - Research Center on Enterprise Networks, Logistics and Transportation
+Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportation
 </p>
 </li>
 </ul>
@@ -51,6 +51,7 @@ Member of CIRRELT - Research Center on Enterprise Networks, Logistics and Transp
   
 <ul>
 <li><p><b><a href="#">Conflict Analytics Lab and MyOpenCourt.org, Canada (2018-present)</a></b><br />
+<b>Associate Director for Strategy and Partnership</b><br />
 <b>Research in Data Science and AI</b>
 </p>
 </li>
