--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@ Bensadoun Faculty Scholar <br />
 Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
+Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> and @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
 Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
-Data Science and AI @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> and @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> </p>
+</p>
 
 </td>
 <td>
