--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@ Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
 <h2>About</h2>
  <p class="p2"><span>
  I am an Associate Professor of Retail Management and Operations Management, the co-director of the <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a>, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
- Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
+ Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing, retail, and data science. Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
- Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing, retail, and data science.
   <!-- My master's thesis was under the supervision of Professor <a href="http://webee.technion.ac.il/people/shimkin/">Nahum Shimkin</a>. 
   Here is a link to <a href="http://webee.technion.ac.il/people/maxcohen">my master's homepage</a>. -->
   
