--- a/research.html
+++ b/research.html
@@ -282,6 +282,15 @@ Media coverage: <a href="https://www.stern.nyu.edu/experience-stern/news-events/
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Under second round of review in <b>Manufacturing & Service Operations Management</b> (after Major Revision) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
+<a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
+Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3274628">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Selected as Best Paper at the 2019 Academy of Management Meeting and accepted to the <i>2019 MSOM Service SIG</i><br />
 Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a> <br />
@@ -315,15 +324,6 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 <ul>
 <li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Major Revision in <b>Management Science</b> <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Major Revision in <b>Manufacturing & Service Operations Management</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
-<a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
-Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
 </div>
 </p>
 </li>
