--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <table class="imgtable"><tr><td>
 <img src="MCohen-2019-V2.png" alt="Maxime Cohen" height="285" width="245" />&nbsp;</td>
 <td align="left"><p><b>Maxime C. Cohen</b><br />
-Associate Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
+Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a><br />
 Co-Director, <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a> <br />
 Bensadoun Faculty Scholar <br />
 Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Computer Engineering Department</a> (by courtesy) <br />
@@ -62,7 +62,7 @@ Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
 
 <h2>About</h2>
  <p class="p2"><span>
- I am an Associate Professor of Retail Management and Operations Management, co-director of the <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a>, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
+ I am a Professor of Retail Management and Operations Management, co-director of the <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a>, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
  Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing, retail, and data science. Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
