--- a/teaching.html
+++ b/teaching.html
@@ -41,7 +41,7 @@ Marketing modules for Integrated Management Thinking and Executive Development C
   
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020 & 2021 </a></b><br />
-Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6 (out of 5)
+Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6, 4.8, 4.9  (out of 5)
 </p>
 </li>
 </ul>
