--- a/news.html
+++ b/news.html
@@ -31,6 +31,9 @@
 </div>
 <h3>In the News</h3>
 <ul>
+  
+<li><p><a href="https://ccentral.ca/future-convenience-stores?utm_source=omeda&utm_medium=email&utm_campaign=NL_Ccentral_REG&utm_keyword=&oly_enc_id=">The future of convenience stores,</a> Canada Convenience Store News, May 2021</p> 
+    
 <li><p><a href="https://financialpost.com/news/retail-marketing/the-future-of-the-convenience-store">From Corner Stores to Frankenstores: Why the Convenience Industry Is Getting a Massive Makeover,</a> Financial Post, April 2021</p> 
     
 <li><p><a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">The High Price of Opportunity Zones,</a> Propmodo, March 2021</p> 
