--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
 <h2>About</h2>
  <p class="p2"><span>
  I am a Professor of Retail and Operations Management, co-director of the <a href="https://www.mcgill.ca/bensadoun-school/ril"</a> Retail Innovation Lab</a>, and a Bensadoun Faculty Scholar at <a href="https://www.mcgill.ca/"</a> McGill University</a>.
- Besides university teaching and academic research, I am actively advising corporations and startups on topics related to pricing, retail, and data science. Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
+ I am also a Scientific Advisor in AI and Data Science at IVADO Labs and a Scientific Director at the non-profit MyOpenCourt.org. Before joining McGill, I was an Assistant Professor of Technology, Operations, and Statistics</a> 
  at <a href="http://www.stern.nyu.edu/"</a> NYU Stern</a> and a Research Scientist at <a href="https://ai.google/">Google AI</a>. 
  I previously worked as a high-frequency trader and co-founded a real estate investment company.
   <!-- My master's thesis was under the supervision of Professor <a href="http://webee.technion.ac.il/people/shimkin/">Nahum Shimkin</a>. 
