--- a/research.html
+++ b/research.html
@@ -202,8 +202,8 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 </ol>
 
 <ol start="15">
-<li><p><a href="https://journals.sagepub.com/doi/pdf/10.1177/19389655211014470">"Field Experiments for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, <b>Cornell Hospitality Quarterly</b>, Published Online, 2021 <br />
-<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">Longer Version</a> <br />
+<li><p><a href="https://journals.sagepub.com/doi/pdf/10.1177/19389655211014470">"Field Experiments for Testing Revenue Strategies in the Hospitality Industry,"</a> with D. Lopez Mateos and N. Pyron, <b>Cornell Hospitality Quarterly</b>, 2021 (published online) <br />
+<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">Longer version</a> <br />
 Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
 </div>
 </li>
