--- a/workEx.html
+++ b/workEx.html
@@ -58,6 +58,13 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
 </ul>
   
 <ul>
+<li><p><b><a href="#">MyOpenCourt.org, Canada (2020-present)</a></b><br />
+<b>Scientific Director</b><br />
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="#">Turbodega, Cherre, Rebloc.io, Silverback.ai, U.S., Canada, and Israel (2017-present)</a></b><br />
 <b>Member of Advisory Board</b>
 </p>
