--- a/students.html
+++ b/students.html
@@ -48,6 +48,8 @@
 
 <li><p>Xiao Lei - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub)</p>
   
+<li><p>Zahra Jalali - Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
+  
 <li><p>Nymisha Bandi - Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
 
 </ul>
@@ -69,6 +71,8 @@
 <li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics. First Position: Virtuo, Data Scientist</p>
   
 <li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow</p>
+  
+<li><p>Tiancheng Zhang (2021) - McGill MMA</p>
   
 <li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
