--- a/research.html
+++ b/research.html
@@ -239,7 +239,14 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </li>
 </ul>
 
-<h3>Book and Book Chapter</h3>
+<h3>Books and Book Chapter</h3>
+
+<ul>
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="">"A Practical Guide for Demand Prediction in Retail,"</a> in progress
+</div>
+</p>
+</li>
+</ul>
 
 <ul>
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2021), <a href="">"Precision Retailing,"</a> University of Toronto Press, in progress
