--- a/research.html
+++ b/research.html
@@ -242,7 +242,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 <h3>Books and Book Chapter</h3>
 
 <ul>
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="">"A Practical Guide for Demand Prediction in Retail,"</a> in progress
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="">"A Practical Guide for Demand Prediction,"</a> in progress
 </div>
 </p>
 </li>
