--- a/research.html
+++ b/research.html
@@ -268,7 +268,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Minor Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 [<a href="https://github.com/leixiao32229/PDFC">Code</a>] <br />
-Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and accepted for oral presentation at the 2020 Workshop on Mechanism Design for Social Good <br />
+Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and accepted at the 2020 Workshop on Mechanism Design for Social Good <br />
 </div>
 </p>
 </li>
