--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
   
 <br /> <br />
 My core expertise lies at the intersection of <b>data science</b> and <b>operations management</b>. I have worked on retail, ride-sharing, airline, sustainability,
-cloud computing, online advertising, peer-to-peer lending, and social networks. I have collaborated with different companies including Google, Waze, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Aldo Group, Couche-Tard/Circle K, Cargo, and Staples as well as several retailers and startups. In each project, I have worked closely with the company to develop solutions 
+cloud computing, online advertising, peer-to-peer lending, and social networks. I have collaborated with many companies including Google, Waze, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Aldo Group, Couche-Tard/Circle K, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <br /> <br />
