--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> 
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
 Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
+<br />
+New Book: <a href="https://demandprediction.github.io/index.html"</a>A Practical Guide for Demand Prediction in Retail</a> (coming soon)<br />
+
 </p>
 
 </td>
