--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Associate Director for Strategy and Partnership @<a href="https://conflictanalyt
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
 Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
 <br />
-New Book: <a href="https://demandprediction.github.io/index.html"</a>A Practical Guide for Demand Prediction in Retail</a> (coming soon)<br />
+<b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>A Practical Guide for Demand Prediction in Retail</a> (coming soon)<br />
 
 </p>
 
