--- a/research.html
+++ b/research.html
@@ -309,7 +309,7 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ul>
 
 <ul>
-<li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Major Revision in <b>Information Systems Research</b> <br />
+<li><p><a href="">"IPOs of Online Platforms: Evidence from Ride-Hailing,"</a> with D. Mitrofanov, Under second round of review in <b>Information Systems Research</b> (after Major Revision) <br />
 </div>
 </li>
 </ul>
