--- a/students.html
+++ b/students.html
@@ -76,6 +76,8 @@
   
 <li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
+<li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
+
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
 </div>
