--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>Finalist in the M&SOM Practice-Based Research Competition, 2021</p>
+    
 <li><p>2020 POMS Wickham Skinner Early-Career Research Accomplishments Award</p>
   
 <li><p>Honorable Mention in the 2020 POMS Service Operations Emerging Scholar Award</p>
@@ -54,8 +56,6 @@
 
 <li><p>2019 M&SOM Meritorious Service Award</p>
 
-<li><p>2018 M&SOM Meritorious Service Award</p>
-
 <li><p>First Place in the 2018 Best Cluster Paper Award - INFORMS Service Science</p>
 
 <li><p>Finalist in the 2018 M&SOM Student Paper Competition (student: Baek Jung Kim)</p>
@@ -63,10 +63,12 @@
 <li><p>First Place in the 2018 INFORMS Case Competition</p>
 
 <li><p>Best Technical Presentation, AGIFORS Annual Symposium (2018)</p>
-
-<li><p>2017 M&SOM Meritorious Service Award</p>
+  
+<li><p>2018 M&SOM Meritorious Service Award</p>
 
 <li><p>Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science</p>
+  
+<li><p>2017 M&SOM Meritorious Service Award</p>
 
 <li><p>2016 INFORMS Revenue Management and Pricing Dissertation Award</p>
 
