--- a/research.html
+++ b/research.html
@@ -285,6 +285,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Under second round of review in <b>Manufacturing & Service Operations Management</b> (after Major Revision) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 <a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
+Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
 </div>
 </p>
 </li>
