--- a/students.html
+++ b/students.html
@@ -72,7 +72,7 @@
   
 <li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow</p>
   
-<li><p>Tiancheng Zhang (2021) - McGill MMA</p>
+<li><p>Tiancheng Zhang (2021) - McGill Master of Management in Analytics</p>
   
 <li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
