--- a/students.html
+++ b/students.html
@@ -66,13 +66,13 @@
   
 <li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow. First Position: Lazard, Investment Banking Analyst</p>
   
-<li><p>Arthur Pentecoste (2020) - McGill Master of Management in Analytics. First Position: BCG GAMMA, Data Scientist</p>
+<li><p>Arthur Pentecoste (2020) - McGill Master in Analytics. First Position: BCG GAMMA, Data Scientist</p>
   
-<li><p>Paul-Emile Gras (2020) - McGill Master of Management in Analytics. First Position: Virtuo, Data Scientist</p>
+<li><p>Paul-Emile Gras (2020) - McGill Master in Analytics. First Position: Virtuo, Data Scientist</p>
   
 <li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow</p>
   
-<li><p>Tiancheng Zhang (2021) - McGill Master of Management in Analytics</p>
+<li><p>Tiancheng Zhang (2021) - McGill Master in Analytics</p>
   
 <li><p>Niloofar Tarighat - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
 
