--- a/students.html
+++ b/students.html
@@ -62,15 +62,15 @@
 
 <li><p>Junge Zhang (2020) - M.S. in Data Science at NYU. First position: BOSS直聘, Algorithm Engineer</p>
   
-<li><p>Matthieu Reed (2020) - McGill UG Integrated Management Student Fellow. First Position: Gorilla Group, Business Analyst</p>
+<li><p>Matthieu Reed (2020) - McGill UG Integrated Management Fellow. First Position: Gorilla Group, Business Analyst</p>
   
-<li><p>Selena Zhu (2020) - McGill UG Integrated Management Student Fellow. First Position: Lazard, Investment Banking Analyst</p>
+<li><p>Selena Zhu (2020) - McGill UG Integrated Management Fellow. First Position: Lazard, Investment Banking Analyst</p>
   
 <li><p>Arthur Pentecoste (2020) - McGill Master in Analytics. First Position: BCG GAMMA, Data Scientist</p>
   
 <li><p>Paul-Emile Gras (2020) - McGill Master in Analytics. First Position: Virtuo, Data Scientist</p>
   
-<li><p>Zacharie Houle (2021) - McGill UG Integrated Management Student Fellow. First Position: Ernst & Young, Insurance Intern</p>
+<li><p>Zacharie Houle (2021) - McGill UG Integrated Management Fellow. First Position: Ernst & Young, Insurance Intern</p>
   
 <li><p>Tiancheng Zhang (2021) - McGill Master in Analytics</p>
   
