--- a/grants.html
+++ b/grants.html
@@ -32,6 +32,10 @@
 <h3>Grants</h3>
 <ul>
 
+<li><p>2021-2026: NSERC Discovery Grant: Retail Innovation Lab: Blending Data Science with Cutting-Edge Technology - $180,000; Role: PI</p>
+
+<li><p>2021-2022: NSERC Discovery Supplement for Early Career Researchers - $12,500; Role: PI</p>
+  
 <li><p>2021-2022: Mitacs Accelerate: AI-Powered Dispute Settlement (with Borden Ladner Gervais, BLG) - $60,000; Role: Co-PI (with S. Dahan)</p>
   
 <li><p>2020-2022: SSHRC Insight Development Grant: Using Data Science and Behavioral Analytics to Alleviate Traffic Congestion - $67,152; Role: PI</p>
