--- a/research.html
+++ b/research.html
@@ -339,7 +339,7 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3742121">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Working paper <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3742121">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Submitted <br />
 Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
 </div>
