--- a/teaching.html
+++ b/teaching.html
@@ -48,14 +48,14 @@ Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.
 
 <ul>
 <li><p><b><a href="">Revenue Management - McGill University - 2020 & 2021 </a></b><br />
-Elective course for Master of Management in Analytics. Evaluation: 5/5
+Elective course for Master of Management in Analytics. Evaluations: 5, 5 (out of 5)
 </p>
 </li>
 </ul>
   
 <ul>
 <li><p><b><a href="">Service Analytics - McGill University - 2020 & 2021 </a></b><br />
-Elective course for Master of Management in Analytics. Evaluation: 4.7/5
+Elective course for Master of Management in Analytics. Evaluations: 4.7, 5 (out of 5)
 </p>
 </li>
 </ul>
