--- a/research.html
+++ b/research.html
@@ -275,7 +275,7 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 </ul>
 
 <ul>
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Minor Revision in <b>Production and Operations Management</b> <br />
+<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Under third round of review in <b>Production and Operations Management</b> (after Minor Revision) <br />
 </div>
 </p>
 </li>
