--- a/research.html
+++ b/research.html
@@ -242,7 +242,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 <h3>Books and Book Chapter</h3>
 
 <ul>
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> Springer in progress
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> Springer, in progress
 </div>
 </p>
 </li>
