--- a/research.html
+++ b/research.html
@@ -316,6 +316,14 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ul>
 
 <ul>
+<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Under third round of review in <b>Management Science</b> (after Major Revision) <br />
+Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3028138">"Competition and Coopetition for Two-Sided Platforms,"</a> with R. Zhang, Major Revision in <b>Production and Operations Management</b> <br />
 Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science <br />
 </div>
@@ -325,14 +333,6 @@ Honorable mention in the 2017 Best Cluster Paper Award - INFORMS Service Science
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3088600">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, Major Revision in <b>Management Science</b> <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="">"A Field Experiment on Airline Lead-in Fares,"</a> with A. Jacquillat and J. C. Serpa, Major Revision in <b>Management Science</b> <br />
-Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
 </li>
