--- a/research.html
+++ b/research.html
@@ -219,14 +219,14 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </ol>
 
 <ol start="17">
-<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
+<li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Forthcoming in <b>MIT Sloan Management Review</b> <br />
 </div>
 </p>
 </li>
 </ol>
 
 <ol start="18">
-<li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Provisionally accepted in <b>MIT Sloan Management Review</b> <br />
+<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
