--- a/research.html
+++ b/research.html
@@ -206,26 +206,37 @@ Finalist in the 2018 M&SOM Student Paper Competition, First Place in the 2018 Be
 <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3665366">Longer version</a> <br />
 Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenue-management-strategies-in-hotels/">Revenue Hub</a> <br />
 </div>
+</p>
+</li>
+</ol>
+
+<ol start="16">
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
+<a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
+Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
+Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
+</div>
+</p>
 </li>
 </ol>
 
 <h3>Managerial Articles</h3>
 
-<ol start="16">
+<ol start="17">
 <li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="17">
+<ol start="18">
 <li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Forthcoming in <b>MIT Sloan Management Review</b> <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="18">
+<ol start="19">
 <li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
@@ -276,16 +287,6 @@ Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transpa
 
 <ul>
 <li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Under third round of review in <b>Production and Operations Management</b> (after Minor Revision) <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Under second round of review in <b>Manufacturing & Service Operations Management</b> (after Major Revision) <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
-<a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
-Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
-Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
 </div>
 </p>
 </li>
