--- a/research.html
+++ b/research.html
@@ -253,21 +253,21 @@ Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
 <h3>Books and Book Chapter</h3>
 
 <ul>
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> Springer, Forthcoming
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b>, Forthcoming
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2021), <a href="">"Precision Retailing,"</a> University of Toronto Press, in progress
+<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla, eds. (2021), <a href="">"Precision Retailing,"</a> <b>University of Toronto Press</b>, in progress
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, Springer Series in Supply Chain Management 9, 2020 <br />
+<li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
 </li>
