--- a/research.html
+++ b/research.html
@@ -214,7 +214,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
 <a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
-Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
+Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </div>
 </p>
 </li>
