--- a/research.html
+++ b/research.html
@@ -211,6 +211,13 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </ol>
 
 <ol start="16">
+<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Forthcoming in <b>Production and Operations Management</b> <br />
+</div>
+</p>
+</li>
+</ol>
+
+<ol start="17">
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3458330">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
 <a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
@@ -222,21 +229,21 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 
 <h3>Managerial Articles</h3>
 
-<ol start="17">
+<ol start="18">
 <li><p><a href="https://maxccohen.github.io/Promotions-Practice.pdf">"Upgrading Promotions Using Business Analytics,"</a> with L. Baardman, K. Panchamgam, and G. Perakis, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="18">
+<ol start="19">
 <li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Forthcoming in <b>MIT Sloan Management Review</b> <br />
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="19">
+<ol start="20">
 <li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, Forthcoming in <b>Management and Business Review</b>
 </div>
 </p>
@@ -280,13 +287,6 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3459289">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, Minor Revision in <b>Management Science</b> <br /> <!-- <font color="red"<b>(NEW - September 2019)</b></font> <br /> -->
 [<a href="https://github.com/leixiao32229/PDFC">Code</a>] <br />
 Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and to the 2020 Workshop on Mechanism Design for Social Good <br />
-</div>
-</p>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=3035992">"Consumer Surplus Under Demand Uncertainty,"</a> with G. Perakis and C. Thraves, Under third round of review in <b>Production and Operations Management</b> (after Minor Revision) <br />
 </div>
 </p>
 </li>
