--- a/research.html
+++ b/research.html
@@ -358,7 +358,7 @@ Finalist in the 2019 INFORMS Data Mining Section Best Paper Competition <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on the Residential Real Estate Market,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on the Residential Real Estate Market,"</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Submitted <br />
 Media coverage: <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
 </div>
 </p>
@@ -366,18 +366,33 @@ Media coverage: <a href="https://www.propmodo.com/the-high-price-of-opportunity-
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Submitted <br />
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Revisiting Bertrand Competition in the Face of Customer Heterogeneity and Price Discrimination,"</a> with A. Jacquillat and H. Song, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Revisiting Bertrand Competition in the Face of Customer Heterogeneity and Price Discrimination,"</a> with A. Jacquillat and H. Song, Submitted <br />
 </div>
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Submitted <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Working paper <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
 
 <!--
 <ul>
