--- a/workEx.html
+++ b/workEx.html
@@ -50,7 +50,7 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
 </ul>
   
 <ul>
-<li><p><b><a href="#">Conflict Analytics Lab and MyOpenCourt.org, Canada (2018-present)</a></b><br />
+<li><p><b><a href="#">Conflict Analytics Lab, Canada (2018-present)</a></b><br />
 <b>Associate Director for Strategy and Partnership</b><br />
 <b>Research in Data Science and AI</b>
 </p>
@@ -66,7 +66,7 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
   
 <ul>
 <li><p><b><a href="#">Turbodega, Cherre, Rebloc.io, Silverback.ai, U.S., Canada, and Israel (2017-present)</a></b><br />
-<b>Member of Advisory Board</b>
+<b>Member of Advisory Board or Advisor</b>
 </p>
 </li>
 </ul>
