--- a/students.html
+++ b/students.html
@@ -51,6 +51,8 @@
 <li><p>Zahra Jalali - Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
   
 <li><p>Nymisha Bandi - Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
+  
+<li><p>Thesis committee: Recep Bekci (McGill), Mehran Poursoltani (HEC Montréal), Claudio Sole (Polytechnique Montréal)</p>
 
 </ul>
 <h3>M.S. and UG Students</h3>
