--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Associate Director for Strategy and Partnership @<a href="https://conflictanalyt
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
 Advisor @<a href="https://sarona.vc"</a> Sarona Ventures</a> <br />
 <br />
-<b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> (launching end of 2021)<br />
+<b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management (launching end of 2021)<br />
 
 </p>
 
