--- a/research.html
+++ b/research.html
@@ -260,7 +260,7 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 <h3>Books and Book Chapter</h3>
 
 <ul>
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b>, Forthcoming
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang (2021), <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management, Forthcoming
 </div>
 </p>
 </li>
