--- a/research.html
+++ b/research.html
@@ -373,7 +373,7 @@ Media coverage: <a href="https://www.propmodo.com/the-high-price-of-opportunity-
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Revisiting Bertrand Competition in the Face of Customer Heterogeneity and Price Discrimination,"</a> with A. Jacquillat and H. Song, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3732463">"Price Discrimination and Inventory Allocation in Bertrand Competition,"</a> with A. Jacquillat and H. Song, Submitted <br />
 </div>
 </p>
 </li>
