--- a/workEx.html
+++ b/workEx.html
@@ -65,18 +65,12 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
 </ul>
   
 <ul>
-<li><p><b><a href="#">Turbodega, Cherre, Rebloc.io, Silverback.ai, U.S., Canada, and Israel (2017-present)</a></b><br />
-<b>Member of Advisory Board or Advisor</b>
+<li><p><b><a href="#">Several startups: Turbodega, Intelligems, Gold Avenue, Cherre, Silverback.ai, Rebloc.io (2017-present)</a></b><br />
+<b>Advisor or Member of Advisory Board</b>
 </p>
 </li>
 </ul>
-  
-<ul>
-<li><p><b><a href="#">Sarona Ventures, Tel Aviv, Israel (2017-present)</a></b><br />
-<b>Advisor</b>
-</p>
-</li>
-</ul>
+
   
 <ul>
 <li><p><b><a href="#">Aldo Group, Montreal, Canada (2019-2020)</a></b><br />
@@ -106,6 +100,13 @@ Conducted research across multiple areas including market algorithms, pricing, a
 </li>
 </ul>
 
+<ul>
+<li><p><b><a href="#">Sarona Ventures, Tel Aviv, Israel (2017-2021)</a></b><br />
+<b>Advisor</b>
+</p>
+</li>
+</ul>
+  
 <ul>
 <li><p><b><a href="http://www.research.ibm.com/labs/watson/index.shtml">IBM Research, Watson Research Center (Summer 2012)</a></b><br />
 <b>Research Intern - Business Analytics and Math Sciences</b><br />
