--- a/workEx.html
+++ b/workEx.html
@@ -65,7 +65,7 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
 </ul>
   
 <ul>
-<li><p><b><a href="#">Several startups: Turbodega, Intelligems, Gold Avenue, Cherre, Silverback.ai, Rebloc.io (2017-present)</a></b><br />
+<li><p><b><a href="#">Several startups: Turbodega, Intelligems, Laps, Cherre, Silverback.ai, Rebloc.io (2017-present)</a></b><br />
 <b>Advisor or Member of Advisory Board</b>
 </p>
 </li>
