--- a/workEx.html
+++ b/workEx.html
@@ -80,8 +80,9 @@ Member of CIRRELT - Research on Enterprise Networks, Logistics and Transportatio
 </ul>
  
 <ul>
-<li><p><b><a href="#">Google/Waze, U.S. and Israel (2018-2019)</a></b><br />
-<b>Advisor at Google (via Adecco) - Pricing and Incentives Lead at Waze</b>
+<li><p><b><a href="#">Google/Waze, U.S. and Israel (2018-2021)</a></b><br />
+2018-2019: <b>Advisor at Google (via Adecco) - Pricing and Incentives Lead at Waze</b><br />
+2019-2021: <b>Research Collaborator</b>
 </p>
 </li>
 </ul>
