--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ cloud computing, online advertising, peer-to-peer lending, real estate, and conf
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <br /> <br />
-I serve as an Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> and for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a>, a Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a>, and an Advisor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a>. I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>.
+I serve as an Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> and for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a>, a Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a>, and an Advisor (and Associate Editor) for <a href="https://mbrjournal.com/"</a>Management and Business Review</a>. I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>.
 
 <br /> <br />
  <p><b>Ph.D.</b>, Operations Research, <a href="http://www.mit.edu/">MIT</a>
