--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@ My core expertise lies at the intersection of <b>data science</b> and <b>operati
 cloud computing, online advertising, peer-to-peer lending, real estate, and conflict analytics. I have collaborated with many companies including Google, Waze, Oracle Retail, IBM Research, Via (ride-sharing), Spotify, Aldo Group, Couche-Tard/Circle K, Cargo, and Staples and I serve on the advisory board of several startups. In each project, I have worked closely with the company to develop solutions 
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
-<br /> <br />
-I serve as an Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> and for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a>, a Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a>, and an Advisor (and Associate Editor) for <a href="https://mbrjournal.com/"</a>Management and Business Review</a>. I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>.
+<h2>Editorial Work</h2>
+<p> Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a>
+<p> Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a>
+<p> Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a>
+<p> Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> 
+<p> I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>.
 
 <h2>Education</h2>
  <p><b>Ph.D.</b>, Operations Research, <a href="http://www.mit.edu/">MIT</a>
