--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ cloud computing, online advertising, peer-to-peer lending, real estate, and conf
 using tools such as optimization, machine learning, stochastic modeling, econometrics, game theory, and field experiments.  <!--I currently serve as a senior editor for the <a href="http://www.poms.org/journal/"</a>POMS</a> journal. -->
 
 <h2>Editorial Work</h2>
-Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> <br />
-Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a><br />
-Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a><br />
-Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a><br />
+Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) <br /><br />
+Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) <br /><br />
+Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-present) <br /><br />
+Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> (2019-present) <br /><br />
 I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>
 
 <h2>Education</h2>
