--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ using tools such as optimization, machine learning, stochastic modeling, econome
 <h2>Editorial Work</h2>
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) 
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
-<p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-present) <
+<p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-present)
 <p>Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> (2019-present) 
-<p>I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a>
+<p>I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a> (2018-2021) 
 
 <h2>Education</h2>
  <p><b>Ph.D.</b>, Operations Research, <a href="http://www.mit.edu/">MIT</a>
