--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,7 @@
 <ul>
 <li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020-2022 </a></b><br />
 Marketing modules for Integrated Management Thinking and Executive Development Course<br />
-AI and Data Analytics module for Advanced Management Course
+AI & Data Analytics module for Advanced Management Course
 </p>
 </li>
 </ul>
