--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@ Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> 
 Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.laps.com/"</a>Laps</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a>, <a href="https://www.rebloc.io/"</a>Rebloc.io</a> <br />
 <br />
 <b>New Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management (launching end of 2021)<br />
-
+<b>Buy the book</b> (Nov. 13, 2021): <a href="https://www.amazon.com/MOXIC-Geometric-Rectangular-Children-Anti-Slip/dp/3030858545/ref=sr_1_1?dchild=1&keywords=Demand+Prediction+in+Retail+springer&qid=1628688454&sr=8-1">
+Amazon.com</a>, 
+<a href="https://www.amazon.ca/Demand-Prediction-Retail-Practical-Predictive/dp/3030858545/ref=sr_1_1?dchild=1&keywords=Demand+Prediction+in+Retail+springer&qid=1628688559&sr=8-1">
+Amazon.ca</a>,
+  <a href="https://www.springer.com/in/book/9783030858544#aboutBook">
+Amazon.fr</a>,
+  <a href="https://www.amazon.fr/Demand-Prediction-Retail-Practical-Predictive/dp/3030858545/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=Demand+Prediction+in+Retail+springer&qid=1628690136&sr=8-1">
+Springer</a>,
+  <a href="https://www.barnesandnoble.com/w/demand-prediction-in-retail-maxime-c-cohen/1139909793?ean=9783030858544">
+Barnes & Noble</a>,
+  <a href="https://www.bookdepository.com/Demand-Prediction-in-Retail-Maxime-C-Cohen-Paul-Emile-Gras-Arthur-Pentecoste-Renyu-Zhang/9783030858544">
+Book Depository</a>,
+  <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/Demand-Prediction-in-Retail--A-Practical-Guide-to-Leverag/9783030858544">
+Browns Books</a>
 </p>
 
 </td>
