--- a/research.html
+++ b/research.html
@@ -395,6 +395,7 @@ Media coverage: <a href="https://www.propmodo.com/the-high-price-of-opportunity-
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3874207">"The Effect of Short-Term Rentals on Residential Investment,"</a> with R. Bekkerman, E. Kung, and D. Proserpio, Working paper <font color="red"<b>(NEW)</b></font> <br />
+Accepted for presentation at CIST 2021 <br />
 </div>
 </p>
 </li>
