--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
 <h3>In the News</h3>
 <ul>
 
-<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. ‘Opportunity Zones’ Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> The Conversation, August 2021</p> 
+<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. ‘Opportunity Zones’ Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> The Conversation and National Post, August 2021</p> 
     
 <li><p><a href="https://sunm.buzzsprout.com/1289195/9017445-maxime-cohen-professor-of-retail-and-operations-management-at-mcgill-university">Podcast - Start-Up Nation Voices,</a> August 2021</p>
   
