--- a/research.html
+++ b/research.html
@@ -250,6 +250,13 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </li>
 </ol>
 
+<ol start="21">
+<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. ‘Opportunity Zones’ Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Published in <b>The Conversation and National Post</b>
+</div>
+</p>
+</li>
+</ol>
+  
 <ul>
 <li><p><a href="">"Leveraging Data & AI to Excel in a Post-Pandemic Retail World,"</a> with M. Krause, Y. Adulyasak, and W. Khern-am-nuai, Submitted <br />
 </div>
