--- a/research.html
+++ b/research.html
@@ -237,7 +237,7 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </ol>
 
 <ol start="19">
-<li><p><a href="">"Frictionless Retail: What Should Retail Executives be Asking About it?"</a> with S. Zhu and S. Ray, Forthcoming in <b>MIT Sloan Management Review</b> <br />
+<li><p><a href="">"How In-Store Tech Will Transform Retail"</a> with S. Zhu and S. Ray, <b>MIT Sloan Management Review</b>, 2021 (published online) <br />
 </div>
 </p>
 </li>
@@ -251,7 +251,7 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </ol>
 
 <ol start="21">
-<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. ‘Opportunity Zones’ Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Published in <b>The Conversation and <a href="https://nationalpost.com/pmn/news-pmn/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely">National Post</a></b>
+<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. Opportunity Zones Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Published in <b>The Conversation and <a href="https://nationalpost.com/pmn/news-pmn/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely">National Post</a></b>, 2021
 </div>
 </p>
 </li>
